--- a/src/assets/styles/emergency.css
+++ b/src/assets/styles/emergency.css
@@ -1,28 +1,205 @@
-* {
-    box-sizing: border-box;
+body {
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
 
-body {
-    background-color: #fff;
-    height: 100%;
-    width: 100%;
-    height: 100vh;
+/* emergency */
+/* 스크롤바(공통) */
+#emergency .scroll {
+    overflow: auto;
+}
+#emergency .scroll::-webkit-scrollbar {
+    width: 5px;
+    margin-left: 5px;
+    border-radius: 3px;
+}
+#emergency .scroll::-webkit-scrollbar-track {
+    background-color: #ddd;
+    border-radius: 3px;
+}
+#emergency .scroll::-webkit-scrollbar-thumb {
+    background-color: #aaa;
+    border-radius: 3px;
 }
 
-/* emergency */
+/* 폰트 */
+#emergency .b25mc{
+    font-family: 'Pretendard-Bold';
+    font-size: 25px;
+    color: #154757;
+}
+#emergency .b20b{
+    font-family: 'Pretendard-Bold';
+    font-size: 20px;
+    color: #111;
+}
+#emergency .b18mc{
+    font-family: 'Pretendard-Bold';
+    font-size: 18px;
+    color: #154757;
+}
+#emergency .b17mc{
+    font-family: 'Pretendard-Bold';
+    font-size: 17px;
+    color: #154757;
+}
+#emergency .b16mc{
+    font-family: 'Pretendard-Bold';
+    font-size: 16px;
+    color: #154757;
+}
+#emergency .b15b{
+    font-family: 'Pretendard-Bold';
+    font-size: 15px;
+    color: #111;
+}
+#emergency .b14dg{
+    font-family: 'Pretendard-Bold';
+    font-size: 14px;
+    color: #3A7A8F;
+}
+#emergency .b13b{
+    font-family: 'Pretendard-Bold';
+    font-size: 13px;
+    color: #111;
+}
+#emergency .b13dp{
+    font-family: 'Pretendard-Bold';
+    font-size: 13px;
+    color: #F07F8E;
+}
+#emergency .r20b{
+    font-family: 'Pretendard-Regular';
+    font-size: 20px;
+    color: #111;
+}
+#emergency .r18mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 18px;
+    color: #154757;
+}
+#emergency .r17b{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #111;
+}
+#emergency .r17w{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #fff;
+}
+#emergency .r17dp{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #F07F8E;
+}
+#emergency .r17mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #154757;
+}
+#emergency .r17g{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #444;
+}
+#emergency .r16mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 16px;
+    color: #154757;
+}
+#emergency .r16dg{
+    font-family: 'Pretendard-Regular';
+    font-size: 16px;
+    color: #3A7A8F;
+}
+#emergency .r16b{
+    font-family: 'Pretendard-Regular';
+    font-size: 16px;
+    color: #111;
+}
+#emergency .r15mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #154757;
+}
+#emergency .r15dg{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #3A7A8F;
+}
+#emergency .r15w{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #fff;
+}
+#emergency .r15b{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #111;
+}
+#emergency .r15d{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #ddd;
+}
+#emergency .r15f0{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #FF0000;
+}
+#emergency .r158{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #888;
+}
+#emergency .r14g{
+    font-family: 'Pretendard-Regular';
+    font-size: 14px;
+    color: #aaa;
+}
+#emergency .r14mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 14px;
+    color: #154757;
+}
+#emergency .r13w{
+    font-family: 'Pretendard-Regular';
+    font-size: 13px;
+    color: #fff;
+}
+#emergency .r13b{
+    font-family: 'Pretendard-Regular';
+    font-size: 13px;
+    color: #111;
+}
+#emergency .r12b{
+    font-family: 'Pretendard-Regular';
+    font-size: 12px;
+}
+#emergency .r128{
+    font-family: 'Pretendard-Regular';
+    font-size: 12px;
+    color: #888;
+}
+
 #emergency {
     margin: 0 auto;
     display: flex;
-
+    overflow: hidden;
+    height: 100vh;
 }
 
 #emergency .sidebar {
     float: left;
     width: 400px;
-    height: 1010px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: #f7f7f7;
 }
 #emergency .sidebar .search-boxes {
     margin: 15px 15px 13px;
@@ -62,24 +239,24 @@ body {
     position: absolute;
     right: 0;
 } 
-#emergency .sidebar .search-boxes .search-box .search-button img {} 
 #emergency .sidebar .total-count {
     margin-left: 20px;
 }
-
 #emergency .sidebar .list {
+    width: 360px;
+    height: 217px;
     margin: 4px 20px 0 15px;
     padding: 10px;
-    border: 1px solid #154757;
+    /* border: 1px solid #154757; */
     border-radius: 10px;
+    margin-bottom: 10px;
+    background-color: #fff;
 }
 #emergency .sidebar .list .title {
     display: flex;
     gap: 7px;
     margin-bottom: 2px;
 }
-#emergency .sidebar .list .title .name {}
-#emergency .sidebar .list .title .gray-name {}
 #emergency .sidebar .list .acg9 {
     display: flex;
     align-items: center;
@@ -90,15 +267,8 @@ body {
     width: 15px;
     height: 15px;
 }
-#emergency .sidebar .list .address-box {}
-#emergency .sidebar .list .address-box .address {}
-#emergency .sidebar .list .phone-box {}
-#emergency .sidebar .list .phone-box .phone {}
-#emergency .sidebar .list .sickbed-box {}
-#emergency .sidebar .list .sickbed-box .sickbed {}
-#emergency .sidebar .list .sickbed-box .subsickbed {}
 #emergency .sidebar .list .s-table {
-    width: 345px;
+    width: 336px;
     height: 50px;
     table-layout: fixed;
     border-collapse: separate;
@@ -108,15 +278,13 @@ body {
 #emergency .sidebar .list .s-table th,
 #emergency .sidebar .list .s-table td {
     height: 22px;
-    font-size: 13px;
-    font-weight: normal;
     padding: 0;
     text-align: center;
     margin-bottom: 8px;
+    font-weight: normal;
 }
 #emergency .sidebar .list .s-table thead tr {
     background-color: #154757;
-    color: white;
 }
 #emergency .sidebar .list .s-table thead tr th:first-child {
     border-top-left-radius: 10px;
@@ -126,29 +294,16 @@ body {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
-
 #emergency .situation-board {
     width: 720px;
-    max-height: 980px;
+    height: 980px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     padding: 14px 25px 20px 18px;
     margin: 16px 0 0 22px;
     overflow-x: hidden;
     overflow-y: auto;
-}
-#emergency .situation-board::-webkit-scrollbar {
-    width: 5px;
-    height: 950px;
-}
-#emergency .situation-board::-webkit-scrollbar-thumb {
-    width: 5px;
-    height: 300px;
-    border-radius: 10px;
-    background-color: #aaa;
-}
-#emergency .situation-board::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background-color: #ddd;
+    padding-bottom: 60px;
+    position: relative;
 }
 #emergency .situation-board .top-title {
     display: flex;
@@ -156,7 +311,6 @@ body {
     padding-bottom: 10px;
     border-bottom: 1px solid #d9d9d9;
 }
-#emergency .situation-board .top-title .name {}
 #emergency .situation-board .top-title img {
     width: 16px;
     height: 16px;
@@ -194,10 +348,26 @@ body {
     padding-left: 10px;
     margin-bottom: 15px !important;
 }
-
-#emergency .situation-board .hosptial-button {}
-#emergency .situation-board .hosptial-button .detail-button {}
-
+#emergency .situation-board .hospital-detail {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+}
+#emergency .situation-board .hospital-detail .button {
+    width: 141px;
+    height: 46px;
+    border: none;
+    border-radius: 25px;
+    font-weight: normal;
+    background-color: #FC7486;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    outline: none;
+    cursor: pointer;
+    position: fixed;
+    bottom: 50px;
+    z-index: 1000;
+}
 #emergency .emergency-map {}
 
 /* 라인잡기 */
