--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,5 +1,5 @@
 @import url("font.css");
-/* @import url("emergency.css"); */
+@import url("emergency.css");
 @import url("medical.css");
 /* @import url("pharmacy.css"); */
 /* @import url("first-aid.css"); */
