--- a/src/assets/styles/emergency.css
+++ b/src/assets/styles/emergency.css
@@ -192,7 +192,6 @@ body {
     overflow: hidden;
     height: 100vh;
 }
-
 #emergency .sidebar {
     float: left;
     width: 400px;
@@ -206,6 +205,7 @@ body {
 } 
 #emergency .sidebar .search-boxes .select-boxs {
     display: flex;
+    width: 370px;
     gap: 6px;
     margin-bottom: 10px;
 } 
