reate emergency api 통신

--- a/src/assets/styles/emergency.css
+++ b/src/assets/styles/emergency.css
@@ -249,7 +249,7 @@ body {
 }
 #emergency .sidebar .list {
     width: 360px;
-    height: 217px;
+    /* height: 217px; */
     margin: 4px 20px 0 15px;
     padding: 10px;
     /* border: 1px solid #154757; */
