--- a/src/assets/style/pharmacy.css
+++ b/src/assets/style/pharmacy.css
@@ -1,21 +1,15 @@
-@import url("./font.css");
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
 body {
     background-color: #fff;
-    height: 100%;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 /* 페이지네이션 css */
 .pagination {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    margin: 30px 0;
 }
 .pagination button {
     margin: 0 5px;
@@ -29,6 +23,167 @@ body {
     background-color: #3A7A8F;
     border-radius: 5px;
     color: #FFFFFF;
+}
+
+/* 폰트 */
+#medicine .b25mc{
+    font-family: 'Pretendard-Bold';
+    font-size: 25px;
+    color: #154757;
+}
+#medicine .b20b{
+    font-family: 'Pretendard-Bold';
+    font-size: 20px;
+    color: #111;
+}
+#medicine .b18mc{
+    font-family: 'Pretendard-Bold';
+    font-size: 18px;
+    color: #154757;
+}
+#medicine .b17mc{
+    font-family: 'Pretendard-Bold';
+    font-size: 17px;
+    color: #154757;
+}
+#medicine .b16mc{
+    font-family: 'Pretendard-Bold';
+    font-size: 16px;
+    color: #154757;
+}
+#medicine .b15b{
+    font-family: 'Pretendard-Bold';
+    font-size: 15px;
+    color: #111;
+}
+#medicine .b14dg{
+    font-family: 'Pretendard-Bold';
+    font-size: 14px;
+    color: #3A7A8F;
+}
+#medicine .b13b{
+    font-family: 'Pretendard-Bold';
+    font-size: 13px;
+    color: #111;
+}
+#medicine .b13dp{
+    font-family: 'Pretendard-Bold';
+    font-size: 13px;
+    color: #F07F8E;
+}
+#medicine .r20b{
+    font-family: 'Pretendard-Regular';
+    font-size: 20px;
+    color: #111;
+}
+#medicine .r18mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 18px;
+    color: #154757;
+}
+#medicine .r17b{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #111;
+}
+#medicine .r17w{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #fff;
+}
+#medicine .r17dp{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #F07F8E;
+}
+#medicine .r17mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #154757;
+}
+#medicine .r17g{
+    font-family: 'Pretendard-Regular';
+    font-size: 17px;
+    color: #444;
+}
+#medicine .r16mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 16px;
+    color: #154757;
+}
+#medicine .r16dg{
+    font-family: 'Pretendard-Regular';
+    font-size: 16px;
+    color: #3A7A8F;
+}
+#medicine .r16b{
+    font-family: 'Pretendard-Regular';
+    font-size: 16px;
+    color: #111;
+}
+#medicine .r15mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #154757;
+}
+#medicine .r15dg{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #3A7A8F;
+}
+#medicine .r15w{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #fff;
+}
+#medicine .r15b{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #111;
+}
+#medicine .r15d{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #ddd;
+}
+#medicine .r15f0{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #FF0000;
+}
+#medicine .r158{
+    font-family: 'Pretendard-Regular';
+    font-size: 15px;
+    color: #888;
+}
+#medicine .r14g{
+    font-family: 'Pretendard-Regular';
+    font-size: 14px;
+    color: #aaa;
+}
+#medicine .r14mc{
+    font-family: 'Pretendard-Regular';
+    font-size: 14px;
+    color: #154757;
+}
+#medicine .r13w{
+    font-family: 'Pretendard-Regular';
+    font-size: 13px;
+    color: #fff;
+}
+#medicine .r13b{
+    font-family: 'Pretendard-Regular';
+    font-size: 13px;
+    color: #111;
+}
+#medicine .r12b{
+    font-family: 'Pretendard-Regular';
+    font-size: 12px;
+}
+#medicine .r128{
+    font-family: 'Pretendard-Regular';
+    font-size: 12px;
+    color: #888;
 }
 
 /* medicine */
@@ -181,7 +336,6 @@ body {
     text-align: center;
     align-items: center;
     justify-content: center;
-    
 }
 #medicine .ddetail-search form .dform-row input[type="text"], 
 #medicine .ddetail-search form .dform-row select {
@@ -248,12 +402,12 @@ body {
     max-width: 1200px;
     table-layout: fixed;
     border-collapse: collapse;
-    font-size: 15px;
     border: 1px solid #ddd;
     /* border-radius: 10px; */
 }
 #medicine .dresult .dtable .no-results {
-
+    text-align: center;
+    padding: 20px 0;
 }
 #medicine .dresult .dtable thead th, td {
     /* border: 1px solid #ddd; */
@@ -270,17 +424,23 @@ body {
 }
 #medicine .dresult .dtable tbody td {
     height: 79px;
-    padding: 0 30px;
+    padding: 0 20px;
 }
-#medicine .dresult .dtable tbody td img .pill-image {
+#medicine .dresult .dtable tbody td:first-child {
+    padding: 0;
+}
+#medicine .dresult .dtable tbody .pill-image {
     width: 151px;
     height: 69px; 
     border-radius: 10px;
+    padding: 0;
+}
+#medicine .dresult .dtable tbody tr td.img-tag {
+    text-align: center;
 }
 #medicine .dresult .dtable tbody .accordion-cell {
     text-align: left;
     padding-left: 0;
-
 }
 #medicine .dresult .dtable tbody tr:hover {
     background-color: #f5f5f5;
@@ -288,9 +448,13 @@ body {
 #medicine .dresult .dtable tbody tr.no-hover:hover {
     background-color: transparent;
 }
+#medicine .dresult .dtable thead th:nth-child(1),
+#medicine .dresult .dtable tbody td:nth-child(1) {
+    width: 180px;
+}
 #medicine .dresult .dtable thead th:nth-child(3),
 #medicine .dresult .dtable tbody td:nth-child(3) {
-    width: 400px;
+    width: 260px;
 }
 #medicine .dresult .dtable thead th:nth-child(4),
 #medicine .dresult .dtable tbody td:nth-child(4),
@@ -299,6 +463,7 @@ body {
 #medicine .dresult .dtable thead th:nth-child(6),
 #medicine .dresult .dtable tbody td:nth-child(6) {
     text-align: center;
+    width: 150px;
 }
 #medicine .dresult .dtable thead th:nth-child(7),
 #medicine .dresult .dtable tbody td:nth-child(7) {
@@ -312,12 +477,9 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
 #medicine .accordion-content td .medicine-details {
-    padding-bottom: 30px;
+    margin: 40px 27px 40px;
 }
 #medicine .accordion-content td .medicine-details h4 {
-    font-size: 18px;
-    font-weight: bold;
-    color: #154757;
     margin-bottom: 7px;
 }
 #medicine .accordion-content td .medicine-details .medicine-item {
@@ -332,19 +494,23 @@ body {
 }
 #medicine .accordion-content td .medicine-details .medicine-item .medicine-left .medicine-info {
     flex: 1;
-    min-width: 380px;
 }
 #medicine .accordion-content td .medicine-details .medicine-item .medicine-left .medicine-info p {
-    display: block;
+    display: flex;
     color: #111;
     padding-left: 10px;
     margin: 20px 0;
+    width: 366px;
 }
-#medicine .accordion-content td .medicine-details .medicine-item .medicine-left .medicine-info strong {
-    display: inline-block;
-    width: 125px;
+#medicine .accordion-content td .medicine-details .medicine-item .medicine-left .medicine-info p strong {
+    display: block;
+    width: 110px;
     color: #154757;
 }
+#medicine .accordion-content td .medicine-details .medicine-item .medicine-left .medicine-info p span{
+    display: block;
+    width: 250px;
+} 
 #medicine .accordion-content td .medicine-details .medicine-item .medicine-right {
     margin: 40px 30px 0 0;
 }
