--- a/src/assets/style/emergency.css
+++ b/src/assets/style/emergency.css
@@ -189,7 +189,7 @@ body {
 #emergency { margin: 0 auto; position: relative; display: flex; overflow: hidden; height: 100vh;}
 
 /* 지도 */
-#emergency .map-background { position: absolute; width: 100%; height: 100vh; margin-top: 70px; z-index: 1;}
+#emergency .map-background { position: absolute; width: 100%; height: 100vh; margin-top: 70px; margin-left: 400px; z-index: 1;}
 
 /* 왼쪽 사이드바 */
 #emergency .sidebar { float: left; width: 400px; height: 100vh; margin-top: 70px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); overflow-x: hidden; overflow-y: auto; background-color: #f7f7f7; z-index: 2;}
