--- a/src/assets/style/emergency.css
+++ b/src/assets/style/emergency.css
@@ -217,7 +217,7 @@ body {
 #emergency .sidebar .list .s-table thead tr th:last-child { border-top-right-radius: 10px; border-bottom-right-radius: 10px;}
 
 /* 종합상황판 */
-#emergency .situation-board { width: 720px; height: calc(100vh - 110px); box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); padding: 14px 25px 20px 18px; margin: 95px 22px 16px 22px; overflow-x: hidden; overflow-y: auto; padding-bottom: 10px; position: relative; background-color: #fff; z-index: 2;}
+#emergency .situation-board { width: 720px; height: calc(100vh - 110px); box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); padding: 14px 25px 20px 18px; margin: 85px 22px 16px 22px; overflow-x: hidden; overflow-y: auto; padding-bottom: 10px; position: relative; background-color: #fff; z-index: 2;}
 #emergency .situation-board .top-title { display: flex; justify-content: space-between; padding-bottom: 10px; border-bottom: 1px solid #d9d9d9;}
 #emergency .situation-board .top-title .close-button { background-color: #fff; border: none; cursor: pointer;}
 #emergency .situation-board .top-title img { width: 16px; height: 16px;}
@@ -240,7 +240,7 @@ body {
 #emergency .hospital-detail .fixed-button { position: fixed; bottom: 50px; z-index: 100;}
 
 /* 종합상황판이 없는 경우 */
-#emergency .simple-detail { height: calc(100vh - 700px); margin: 95px 22px 22px 22px; width: 300px; background-color: #fff; z-index: 2; padding: 20px;}
+#emergency .simple-detail { height: calc(100vh - 700px); margin: 85px 22px 22px 22px; width: 300px; background-color: #fff; z-index: 2; padding: 20px;}
 #emergency .simple-detail .non-title { display: flex; justify-content: space-between; margin-bottom: 20px;}
 /* #emergency .simple-detail .emergency-name { margin-bottom: 20px;} */
 #emergency .simple-detail .hospital-detail { position: relative; width: 100%; height: 120px; display: flex;}
@@ -251,3 +251,82 @@ body {
 div {
     /* outline: 1px solid black; */
 }
+
+#emergency .simple-detail,
+#emergency .situation-board {
+    position: relative;
+}
+#emergency .simple-detail + .detail{left:750px;}
+#emergency .situation-board + .detail{left:1150px;}
+
+/* 펼쳐지는 상세정보 */
+#emergency .detail{position:absolute; top:85px; left:750px; width:390px; height: calc(100% - 100px); box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1); border-radius: 10px; background: #fff; overflow: hidden; z-index: 999;}
+#emergency .detail .scroll{height:100%; padding:0 15px 10px 20px; }
+#emergency .detail .scroll>p{position:fixed; width:350px; margin-bottom:15px; padding-top:10px; border-bottom:1px solid #ddd; background: #fff; font-size: 17px; line-height: 45px; z-index: 100;}
+#emergency .detail .scroll>p span{float: right; cursor: pointer;}
+#emergency .detail .data>p{margin-top:65px; margin-bottom:5px; font-family: 'Pretendard-Bold'; font-size: 22px; color:#154757;}
+#emergency .detail .data>p a{float:right;}
+#emergency .detail .data>p a img{vertical-align: -2px;}
+#emergency .detail .data span{font-size: 17px; color:#888;}
+#emergency .detail .data .open{margin:5px 0 10px; font-size: 17px; }
+#emergency .detail .data .open p{display: inline-block; margin-right:5px; font-family: 'Pretendard-Regular';  font-size: 17px; }
+#emergency .detail .data .open p.green{color:#43AC52;}
+#emergency .detail .data .open p.red{color:#FF3C3C;}
+#emergency .detail .data table tr th{padding:3px 8px 3px 0px;}
+#emergency .detail .data table tr td{line-height: 18px; font-size: 15px;}
+#emergency .detail .data table tr.emergency{color:#FF3C3C}
+/* 상세정보-탭메뉴 */
+#emergency .detail .detail-tab{margin-top:15px; cursor: pointer;}
+#emergency .detail .detail-tab p{width:50%; height: 27px; text-align: center; font-size: 17px; height: 27px; border-bottom: 1px solid #ddd;}
+#emergency .detail .detail-tab p.on{border-bottom:3px solid #FC7486;}
+#emergency .detail .tab-container{position:relative;}
+#emergency .detail .tab-container .tab-con{position:absolute; top:0; left:0; width:100%; padding-bottom:20px; display: none;}
+#emergency .detail .tab-container .tab-con.show{display: block;}
+#emergency .detail .tab-container .tab-con.hide{display: none;}
+/* 상세정보-시간&진료과목 */
+#emergency .detail h4{margin:20px 0 7px; font-family: 'Pretendard-Bold'; font-size: 18px; }
+#emergency .detail .time table{width:100%; border-collapse: collapse;}
+#emergency .detail .time table tr{line-height: 40px;}
+#emergency .detail .time table tr th{width:100px; border:1px solid #ddd; background: #f4f4f4; font-weight: 400;}
+#emergency .detail .time table tr td{padding-left:10px; border:1px solid #ddd;}
+#emergency .detail .time table tr.holiday{color:#FF3C3C}
+#emergency .detail .subject ul li{list-style: disc; margin-left:25px; line-height: 25px;}
+
+
+/* 상세정보-평점&리뷰 */
+#emergency .detail .score table{width:100%;}
+#emergency .detail .score table th{padding-right:15px; font-weight: 400;}
+#emergency .detail .score table td{padding:7px 0;}
+#emergency .detail .score table td>div{width:220px; height:8px; border-radius: 4px; background: #ddd; }
+#emergency .detail .score table td>div p{width:170px; height:8px; border-radius: 4px; background: #FC7486; }
+#emergency .detail .score table td:nth-child(3){text-align: center;}
+#emergency .detail .score table td>p{font-family: 'Pretendard-Bold'; font-size: 50px; text-align: center;}
+#emergency .detail .score table td>span{display: block;}
+#emergency .detail .score table+a{display: block; width:110px; margin:20px auto; border:1px solid #FC7486; border-radius: 19px; line-height:38px; text-align: center; font-size: 15px; color:#FC7486; }
+#emergency .detail .review ul{margin-top:15px;}
+#emergency .detail .review ul li{margin-bottom:15px; padding-bottom:15px; border-bottom:1px solid #ddd}
+#emergency .detail .review ul li:last-child{margin-bottom:0; padding-bottom:0; border:none;}
+#emergency .detail .review ul li .flex{justify-content: start; margin-bottom:8px;}
+#emergency .detail .review ul li .flex .img{width:40px; height:40px; margin-right:10px; border: 1px solid #ddd; border-radius: 50%; overflow: hidden;}
+#emergency .detail .review ul li .flex .img img{width:100%; height:100%;}
+#emergency .detail .review ul li .flex div{font-size: 17px;}
+#emergency .detail .review ul li .flex div p{margin-top:3px; font-size: 13px; color:#888;}
+#emergency .detail .review ul li>p{margin-top:5px; font-size: 15px;}
+
+
+/* 리뷰 모달창 */
+#emergency .review-modal{ position: fixed; top:0; left:0; display: flex; justify-content: center; align-items: center; width:100%; height:100vh; background: rgba(0, 0, 0, 0.7); z-index: 99999;}
+#emergency .review-modal .box{width:580px; height:352px; padding:40px 30px; border-radius: 10px; background: #fff; }
+#emergency .review-modal .box form>p{margin-bottom:20px; text-align: center; font-family: 'Pretendard-Bold'; font-size: 25px; color:#154757;}
+#emergency .review-modal .box .flex p{font-size: 22px;}
+#emergency .review-modal .box .flex .img{width:40px; height:40px; margin-right:10px; border: 1px solid #ddd; border-radius: 50%; overflow: hidden;}
+#emergency .review-modal .box .flex .img img{width:100%; height:100%;}
+#emergency .review-modal .box .grade{cursor: pointer;}
+#emergency .review-modal .box textarea{width:100%; height:100px; margin:20px 0; padding:10px; border:1px solid #ddd; border-radius: 5px;  resize: none; overflow-y: auto; outline: none;}
+#emergency .review-modal .box textarea::-webkit-scrollbar{width:5px; margin-left:5px; border-radius: 3px;}
+#emergency .review-modal .box textarea::-webkit-scrollbar-track{background: #ddd; border-radius: 3px;}
+#emergency .review-modal .box textarea::-webkit-scrollbar-thumb{background: #aaa; border-radius: 3px;}
+#emergency .review-modal .box .btn{justify-content: center}
+#emergency .review-modal .box .btn a{width:90px; margin:0 5px; border:1px solid #ddd; border-radius: 5px; line-height: 37px; text-align: center; color:#888; cursor: pointer;}
+#emergency .review-modal .box .btn a.review-btn{background: #FC7486; border-color: #FC7486; color:#fff;}
+
