--- a/src/assets/style/emergency.css
+++ b/src/assets/style/emergency.css
@@ -199,7 +199,7 @@ body {
 #emergency .sidebar { float: left; width: 400px; height: 100vh; margin-top: 70px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); overflow: hidden; background-color: #f7f7f7; z-index: 2;}
 #emergency .sidebar .search-boxes { margin: 15px 15px 13px;} 
 #emergency .sidebar .search-boxes .select-boxs { display: flex; width: 370px; gap: 6px; margin-bottom: 10px;} 
-#emergency .sidebar .search-boxes .select-boxs select { width: 182px; height: 40px; border: 1px solid #154757; border-radius: 5px; padding: 11px 8px;} 
+#emergency .sidebar .search-boxes .select-boxs select { width: 182px; height: 40px; border: 1px solid #154757; border-radius: 5px; padding: 11px 8px; outline: none;} 
 #emergency .sidebar .search-boxes .search-box { width: 370px; height: 40px; border: none; position: relative; } 
 #emergency .sidebar .search-boxes .search-box .input { width: 100%; height: 100%; border: 1px solid #154757; border-radius: 5px; padding-left: 10px;} 
 #emergency .sidebar .search-boxes .search-box .input::placeholder { font-family: 'Pretendard-Regular'; font-size: 15px; color: #ddd;}
