--- a/src/assets/style/emergency.css
+++ b/src/assets/style/emergency.css
@@ -204,7 +204,9 @@ body {
 #emergency .sidebar .search-boxes .search-box .input { width: 100%; height: 100%; border: 1px solid #154757; border-radius: 5px; padding-left: 10px;} 
 #emergency .sidebar .search-boxes .search-box .input::placeholder { font-family: 'Pretendard-Regular'; font-size: 15px; color: #ddd;}
 #emergency .sidebar .search-boxes .search-box .search-button { width: 40px; height: 40px; background-color: #154757; border: none; border-top-right-radius: 5px; border-bottom-right-radius: 5px; position: absolute; top: 0; right: 0;} 
-#emergency .sidebar .total-count { margin-left: 20px;}
+#emergency .sidebar .flex { margin-bottom: 8px;}
+#emergency .sidebar .flex .total-count { margin-left: 20px;}
+#emergency .sidebar .flex .sorting { margin-right: 20px; font-size: 13px; color: #555; cursor: pointer;}
 #emergency .sidebar .list { width: 360px; margin: 4px 4px 0 15px; padding: 10px; border-radius: 10px; margin-bottom: 10px; background-color: #fff; cursor: pointer;}
 #emergency .sidebar .list .title { display: flex; gap: 7px; margin-bottom: 2px;}
 #emergency .sidebar .list .acg9 { display: flex; align-items: center; gap: 9px; margin: 8px 0;}
