--- a/src/assets/style/emergency.css
+++ b/src/assets/style/emergency.css
@@ -194,6 +194,8 @@ body {
 
 /* 지도 */
 #emergency .map-background { position: absolute; width: 100%; height: 100vh; margin-top: 70px; margin-left: 200px; z-index: 1;}
+#emergency #naviButton { position:fixed; bottom:40px; right:20px; width:65px; height:65px; border-radius: 50%; z-index: 100;}
+#emergency #naviButton img { width:100%;}
 
 /* 왼쪽 사이드바 */
 #emergency .sidebar { float: left; width: 400px; height: 100vh; margin-top: 70px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); overflow: hidden; background-color: #f7f7f7; z-index: 2;}
@@ -227,9 +229,6 @@ body {
 #emergency .situation-board .top-title img { width: 16px; height: 16px;}
 
 #emergency .situation-board .emergency-title { display: flex; align-items: center; justify-content: space-between; margin: 16px 0 20px;}
-#emergency .situation-board .emergency-title .emergency-name { }
-#emergency .situation-board .emergency-title .find { width: 75px; height: 30px; border: 1px solid #154757; border-radius: 20px; display: flex;align-items: center; justify-content: center; cursor: pointer;}
-#emergency .situation-board .emergency-title .find:hover { color: white; transition: background-color 0.5s ease; background-color: #154757;}
 #emergency .situation-board .big-item { margin-bottom: 25px; width: 677px; }
 #emergency .situation-board .big-item .title,
 #emergency .situation-board .big-item .sub-title { margin-bottom: 6px;}
